# smart-lamp-recycling

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  SAM3_COMMUNITY_SETUP.md  build-and-deploy.bat  build-and-deploy.ps1  build-and-deploy.sh  capacitor.config.json  combined_services.spec  docker-compose.yml  download.html  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts  yaml.py
AILightShell/: APK_BUILD_NOTES.md  (+4 more)
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/: pyproject.toml
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/configs/: detection.yaml  fields.yaml  pricing.yaml  system.yaml
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/data/: README.md
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/data/detection_dataset/: dataset.yaml
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/data/manifests/: prepared_data_summary.json
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/: baseline.py  config.py  entrypoints.py  recommendation.py  types.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/annotation/: sam3_checkpoint.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/data/: prepare.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/detection/: yolo_transformer.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/embedding/: openclip_embedder.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/pricing/: __init__.py  residual_training.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/image_quote_system/retrieval/: faiss_index.py
deliverables/smart-lamp-recycling-full-core-source-v1.0.0-20260417/services/vision-api/scripts/: apply_review_decisions.py  evaluate_baseline.py  export_detector.py  infer_detector.py  quote_image.py  retrieve_similar.py  review_annotation.py  sam3_bridge_worker.py  serve_api.py  train_residual.py  vision_local_server.py
(+345 files in other folders)
